--- a/html/bootstrap9.html
+++ b/html/bootstrap9.html
@@ -21,13 +21,39 @@
  			  { display: none }
  			#imagen
  			  { display: initial }
-      p {color:red;}
+      		p {color:red;}
+
+      		.desaparece 
+      			{ display: none; }		
   		};
+
+
   	</style>
 </head>
 <body>
-  <div class="container">
 
+<nav class="navbar navbar-expand-md bg-dark navbar-blue">
+  <a class="navbar-brand" href="#"><i class="fas fa-home"></i>  <span class="desaparece"> Inicio </span></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#"><i class="fas fa-desktop"></i>  <span class="desaparece">Productos</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#"><i class="fas fa-handshake"></i> <span class="desaparece">Servicios </span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#"><i class="fas fa-id-card"></i> <span class="desaparece">Contacto </span></a>
+      </li>    
+    </ul>
+  </div>  
+</nav>
+
+
+  <div class="container">
 
 	<div class="row">
 	  <div class="col-md-4">
